--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/bcbf851183.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-
-    <div id="app">
-        <input type="text" v-model="newtodo" @keyup.enter="addTodo">
-        <button @click="addTodo">Aggiungi</button>
-        <hr>
-        <ul>
-            <li v-for="(todo, index) in todolist" @click="done($event)">
-                {{todo}}
-                <button @click="deleteTodo(index)">X</button>
-            </li>
-        </ul>
+    <div class="container">
+        <div id="app">
+            <div class="triangle"></div>
+            <div class="triangleFolded"></div>
+            
+            <h1 class="title">ToDo</h1>
+            <input type="text" v-model="newtodo" @keyup.enter="addTodo">
+            <button @click="addTodo">Add</button>
+            <ul>
+                <li v-for="(todo, index) in todolist" @click="done($event)">
+                    {{todo}}
+                    <button @click="deleteTodo(index)" class="delete">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
